fixed header spacing bottom

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -83,7 +83,8 @@ $month-indent: 2em;
 $content-width: 50%;
 
 /* Space above and below the header section */
-$header-spacing: 125px; 
+$header-spacing-top: 125px; 
+$header-spacing-bottom: 100px;
 
 /* Weight of the line at the top of the page */
 $top-line-weight: 8px;     
